@@ -1,0 +1,96 @@
+ CRM 2.0 CCM 3.6 Column Radiation Model (CRM) Input File -*-text-*-
+ Polar Atmosphere Profile from Briegleb & Light 2007, p. 73
+ CRM homepage: http://dust.ess.uci.edu/crm
+ 140.5         Julian day of year at Greenwich (1.5 = Noon, Jan 1 GMT)
+  80.0          Latitude (degrees North, from -90.0 to +90.0)
+  Level  p [mb]    T [K]    H2O mmr    O3 mmr     Cld frc.  Cld LWP
+    01      2      273      4.0e-6     7.0e-6     0.000e+00 0.000e+00 
+    02      5      251      4.0e-6     1.3e-5     0.000e+00 0.000e+00 
+    03     15      234      4.0e-6     1.0e-5     0.000e+00 0.000e+00 
+    04     35      226      4.0e-6     5.5e-6     0.000e+00 0.000e+00 
+    05     60      225      4.0e-6     4.2e-6     0.000e+00 0.000e+00 
+    06    105      225      4.0e-6     2.2e-6     0.000e+00 0.000e+00 
+    07    160      225      6.4e-6     1.0e-6     0.000e+00 0.000e+00 
+    08    235      225      2.6e-5     5.0e-7     0.000e+00 0.000e+00 
+    09    320      234      1.2e-4     2.0e-7     0.000e+00 0.000e+00 
+    10    420      247      5.2e-4     1.4e-7     0.000e+00 0.000e+00 
+    11    520      257      1.1e-3     1.0e-7     0.000e+00 0.000e+00 
+    12    610      265      2.0e-3     8.0e-8     0.000e+00 0.000e+00 
+    13    710      272      3.1e-3     7.0e-8     0.000e+00 0.000e+00 
+    14    800      277      4.2e-3     6.0e-8     0.000e+00 0.000e+00
+    15    870      280      5.1e-3     5.5e-8     0.000e+00 0.000e+00 
+    16    930      281      5.9e-3     5.0e-8     0.000e+00 0.000e+00 
+    17    970      278      4.0e-3     4.5e-8     0.000e+00 0.000e+00 
+    18   1000      276      3.0e-3     4.0e-8     0.000e+00 0.000e+00 
+ 1008.000     Surface pressure [mb]
+  273.00      Surface air temperature [K]
+  273.00      Ground (skin) temperature [K]
+    1         Surface type flag (0=ocn, 1=lnd, 2=sea ice)
+    0.010     Surface aerodynamic roughness [m] (obsolete)
+    0.000     Snow cover liquid water equivalent [m]
+    0.754     Albedo (Vis, direct) BrL07 p. 41 and Table 8
+    0.754     Albedo (Vis, diffuse) BrL07 p. 41 and Table 8
+    0.471     Albedo (NIR, direct) 0.78*0.573+(1-0.78)*0.11
+    0.471     Albedo (NIR, diffuse) 0.78*0.573+(1-0.78)*0.11
+    0.0       Fraction strong zenith angle dep. sfc. (obsolete)
+    3.70e-4   CO2 volume mixing ratio
+    0.311e-6  N2O volume mixing ratio
+    1.714e-6  CH4 volume mixing ratio
+    0.280e-9  CFC11 volume mixing ratio
+    0.503e-9  CFC12 volume mixing ratio
+    0.12      Aerosol visible extinction optical depth*
+ 1367.0       Solar constant [W m-2]
+ 1950         Year AD (integer)
+    0.0       Longitude (degrees East, from 0.0 to 360.0)
+
+Notes on the input:
+
+The Julian day of year, also known as the calendar day (calday in the
+code), is always specified in Greenwich Mean Time (GMT).  For example,
+1.5 is Greenwich noon on January 1st, 2.0 is Greenwich midnight of
+January 2nd. 31.5 and 32.5 are GMT noontimes for January 31st and
+February 1st, respectively. Longitude is specified in degrees east of
+Greenwich.  The CRM uses the specified year, latitude, longitude and
+GMT to compute the correct Sun-Earth distance and solar zenith angle. 
+The CRM does not apply the equation of time, see the FAQ for details.
+
+Latitude runs from -90 to +90 degrees, Longitude from 0.0 to 360.0.
+
+The total number of levels must be the same as the PLEV and PLEVR
+tokens in the file src/crm/params.h.
+ 
+Pressure data is on mid-levels, like temperature, moisture, and
+winds. The radiation code requires the interface pressures between
+layers. These are computed as simple averages of adjacent level
+pressures.
+
+Dimensional units of input data:
+Temperature is input in K.
+Pressure is input in mb.
+H2O and O3 are input as mass mixing ratios, 
+Cloud cover is input as a fraction from 0.0 to 1.0.
+Cloud cover of 1.0 is reset internally to 0.999, since cloud fractions
+of exactly 1.0 cause the longwave code to fail.
+Cloud liquid water path is input in g m-2 in each layer. 
+Trace gases CO2, NO2, CH4, CFC11, and CFC12 are input as volume mixing
+ratios.
+
+Surface temperatures input are the air temperature in contact
+with the surface, and the actual skin temperature of the surface. 
+
+Surface type determines if the surface albedos specified are modified
+before use. Over ocean and sea-ice, the specified spectral/angular
+albedos are set internally. For land points, the spectral/angular
+albedos read in are used without modification. 
+
+Snow cover is used over sea-ice to help set surface albedos.
+
+Fractional strong zenith angle dependent surface and surface
+aerodynamic roughness are obsolete. They are only input to maintain
+backwards compatability with previous CRM versions.
+
+*Important information regarding Aerosol Optical Depth (AOD) is
+contained in the file AEROSOL.
+
+Year AD must be input as an integer.
+
